# amstools

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
amstools/: README.md  __init__.py  _version.py  analyze.py  lammps.py  qatoms.py  thermodynamics.py  utils.py
amstools/cli/: ams_calculation.py  ams_collect.py  ams_custodian_vasp.py  ams_dft_manager.py  ams_highthroughput.py  ams_pipeline.py  ams_webinterface.py  pace_activelearning.py
amstools/highthroughput/: generate_ht_pipeline_setup.py  utils.py
amstools/pipeline/: __init__.py  exc.py  generalstructure.py  pipeline.py  pipelinestep.py  scheduler.py
amstools/properties/: __init__.py  defectformation.py  elasticmatrix.py  gammasurface.py  generalcalculator.py  interstitial.py  murnaghan.py  nnexpansion.py  (+8 more)
test/: test_analyze.py  test_defectFormationCalculator.py  test_elasticMatrixCalculator.py  test_gammasurface.py  test_interstitialFormationCalculator.py  test_lammps.py  test_murnaghanCalculator.py  test_nnexpcalculator.py  test_phonopyCalculator.py  test_pipeline.py  test_pipeline_indexing.py  test_pipeline_naming.py  test_qatoms.py  test_randomdeform.py  test_relaxation.py  test_resources.py  test_sources.py  test_stackingFaultCalculator.py  test_structures.py  test_surfaceEnergyCalculator.py  test_thermodynamicQHACalculator.py  test_thermodynamics.py  test_transformationPathCalculator.py  test_utils.py  utils.py
tutorial/: AMS tools - demo.ipynb  AMS tools - pipeline.ipynb  LAMMPS.ipynb  Nb_bcc_pipeline.json  QAtoms-DEMO-2.ipynb  QAtoms-DEMO.ipynb  cif2cfg.ipynb  pipeline_json_as_reference.ipynb  write_structure_examples.ipynb
(+341 files in other folders)
